# universal_downloader

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
udlr/: __init__.py  __main__.py  main.py  novel.py  registry.py  schema.py  utils.py
udlr/downloaders/: __init__.py  u9mm.py  zhxs.py
udlr/templates/: index.html
udlr/utils/: __init__.py  context.py  http.py  progress.py
